# eventum-generator

./: .editorconfig  .gitignore  .prettierrc  CHANGELOG.md  LOGGING.md  README.md  eslint.config.js  out.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
config/: eventum.yml  generators.yml  startup.yml
eventum/: __init__.py  exceptions.py  logging_context.py  logging_handlers.py
eventum/api/: __init__.py  database.py  dependencies.py  hooks.py  main.py
eventum/api/dependencies/: __init__.py  app.py  authentication.py  generator_files.py
eventum/api/routers/: __init__.py
eventum/api/routers/auth/: __init__.py  routes.py
eventum/api/routers/docs/: __init__.py  routes.py  ws_schema_generator.py
eventum/api/routers/generator_configs/: __init__.py  dependencies.py  file_tree.py  models.py  routes.py  runtime_types.py
eventum/api/routers/generators/: __init__.py  dependencies.py  models.py  routes.py
eventum/api/routers/instance/: __init__.py  models.py  routes.py
eventum/api/routers/preview/: __init__.py  dependencies.py  models.py  routes.py  timestamps_aggregation.py
eventum/api/routers/secrets/: __init__.py  routes.py
eventum/api/routers/startup/: __init__.py  dependencies.py  routes.py
eventum/api/routes/: __init__.py  generator_configs.py  generators.py
eventum/api/routes/generator_configs/: __init__.py  dependencies.py  plugin_config_types.py  routes.py
eventum/api/routes/generators/: __init__.py  dependencies.py  models.py  routes.py
eventum/api/tests/: test_main.py
eventum/api/utils/: __init__.py  file_streaming.py  response_description.py  websocket_annotations.py
eventum/app/: __init__.py  hooks.py  main.py  manager.py
eventum/app/models/: __init__.py  generators.py  settings.py
eventum/app/tests/: test_manager.py
eventum/cli/: __init__.py  eventum.py  eventum_keyring.py  logging.py  logging_config.py  pydantic_converter.py  splash_screen.py
eventum/cli/commands/: eventum.py  eventum_keyring.py
eventum/cli/pydantic/: converter.py
eventum/cli/tests/: test_pydantic_converter.py
eventum/core/: __init__.py  config.py  config_loader.py  entrypoint.py  executor.py  gauge.py  generator.py  initializer.py  main.py  manager.py  parameters.py  plugins_initializer.py
eventum/core/loaders/: __init__.py  config.py  plugins.py
eventum/core/models/: config.py  exit_codes.py  generation.py  generator.py  generators.py  metrics.py  settings.py
eventum/core/tests/: test_config.py  test_generator.py  test_initializer.py
eventum/logging/: __init__.py  config.py  file_paths.py  handlers.py  processors.py
eventum/logging/tests/: test_logging_context.py  test_logging_handlers.py  test_processors.py
eventum/plugins/: exceptions.py  fields.py  loader.py  registry.py
eventum/plugins/base/: __init__.py  config.py  metrics.py  plugin.py
eventum/plugins/event/: __init__.py  exceptions.py
eventum/plugins/input/: __init__.py  adapters.py  batcher.py  buffer.py  exceptions.py  fields.py  merger.py  mixins.py  normalizers.py  protocols.py  relative_time.py  scheduler.py
eventum/plugins/output/: __init__.py  exceptions.py  fields.py  formatters.py  http_client.py
eventum/plugins/tests/: test_loader.py  test_registry.py
eventum/security/: __init__.py  manage.py
eventum/security/tests/: test_manage.py
eventum/tests/: test_logging_context.py  test_logging_handlers.py
eventum/ui/: eslint.config.js  package-lock.json  package.json  vite.config.ts
eventum/ui/src/: App.tsx  index.css  main.tsx
eventum/utils/: __init__.py  fs_utils.py  json_utils.py  logging.py  package_utils.py  throttler.py  traceback_utils.py  validation_prettier.py
eventum/utils/tests/: test_fs_utils.py  test_json_utils.py  test_package_utils.py  test_relative_time.py  test_throttler.py  test_validation_prettier.py
src/: App.tsx  Layout.tsx  main.tsx
src/api/: client.ts
src/components/: AppSidebar.tsx  ThemeToggle.tsx
src/components/common/: LightIndicator.tsx  RelativeDate.tsx  ThemeToggle.tsx
src/components/layout/: AppLayout.tsx  AppSidebar.tsx
src/components/ui/: LightIndicator.tsx  badge.tsx  button.tsx  checkbox.tsx  colored-badge.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  navigation-menu.tsx  popover.tsx  select.tsx  sheet.tsx  sidebar.tsx  table.tsx  tooltip.tsx
src/layout/: Layout.tsx
src/pages/: ConnectPage.tsx  ErrorPage.tsx  GeneratorInstances.tsx  Generators.tsx  NotFound.tsx  NotFoundPage.tsx  Overview.tsx  Secrets.tsx  Settings.tsx  Tags.tsx
src/routes/: index.ts  index.tsx  routeConfig.tsx  routePaths.ts
src/routing/: config.tsx  index.tsx
ui/: .editorconfig  .gitignore  LICENSE  eslint.config.js  index.html  package-lock.json
ui/src/components/: PageIllustration.tsx
ui/src/pages/: ConnectPage.tsx  ErrorPage.tsx  NotFoundPage.tsx
ui/src/routing/: index.tsx
(+409 files in other folders)
