[tool.poetry]
name = "eventum-generator"
version = "2.0.0"
description = "Flexible event generator"
license = "Apache-2.0"
authors = ["Nikita Reznikov <nikita.reznikov.public@mail.ru>"]
readme = "README.md"
repository = "https://github.com/eventum-project/eventum-plugins"
documentation = "https://eventum-project.github.io/website/"
keywords = ["event", "data", "dataset", "sample", "log", "generator", "synthetic", "template", "scheduling"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
packages = [
  {include = "eventum"},
  {include = "eventum/py.typed"},
]

[tool.poetry.dependencies]
python = "^3.13"
aiofiles = "^24.1.0"
case-converter = "^1.2.0"
click = "^8.1.8"
clickhouse-connect = "^0.8.15"
croniter = "^5.0.1"
dateparser = "^1.2.1"
faker = "^30.10.0"
fastapi = {extras = ["standard"], version = "^0.115.10"}
flatten-dict = "^0.4.2"
griffe = "^1.5.7"
httpx = "^0.28.1"
jinja2 = "^3.1.5"
keyring = "^25.6.0"
keyrings-cryptfile = "^1.3.9"
mimesis = "^18.0.0"
msgspec = "^0.19.0"
numpy = "^2.2.3"
pwinput = "^1.0.3"
pydantic = "^2.10.6"
pytz = "^2024.2"
pyyaml = "^6.0.2"
rich = "^13.9.4"
setproctitle = "^1.3.5"
structlog = "^24.4.0"
tablib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
isort = "^5.13.2"
matplotlib = "^3.10.1"
mypy = "^1.15.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.23.8"
pytest-httpx = "^0.35.0"
requests = "^2.32.3"
types-aiofiles = "^23.2.0.20240623"
types-croniter = "^2.0.5.20240722"
types-dateparser = "^1.2.0.20250208"
types-pytz = "^2024.2.0.20241221"
types-pyyaml = "^6.0.12.20241230"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eventum = "eventum.cli.commands.eventum:cli"
eventum-keyring = "eventum.cli.commands.eventum_keyring:cli"